# AgroConnectMCP

./: .cache.sqlite  .dockerignore  .env  Dockerfile  README.md  pyproject.toml  requirements.txt  server.py  test_soil_history.py  test_tool.py  test_weather.py
website/: index.html  script.js  styles.css
