[project]
name = "agroconnectmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.3.1",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "openmeteo-requests>=1.3.0",
    "pandas>=2.2.0",
    "requests-cache>=1.2.0",
    "retry-requests>=2.0.0"
]

